# gru

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PR_DESCRIPTION.md  README.md  RELEASING.md  SECURITY.md  book.toml  build.rs  cliff.toml  events.jsonl  justfile
.claude/: settings.json
.claude/commands/: cqip.md  decompose.md  do.md  fix.md  issue.md  pr_review.md  rebase.md  respond.md  setup-worktree.md
.claude/skills/agent-skills/: README.md  SKILL.md  advanced-template.md  basic-template.md
.claude/skills/git-rebase/: README.md  SKILL.md
.claude/skills/git-worktrees/: README.md  SKILL.md
.claude/skills/github-issues/: SKILL.md
.claude/skills/gru-guide/: README.md  SKILL.md
.claude/skills/product-manager/: README.md  SKILL.md  prd-template.md  user-story-examples.md
.claude/skills/project-manager/: README.md  (+2 more)
.githooks/: install-hooks.sh  pre-commit
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: AGENTS.md  COMPETITIVE_LANDSCAPE.md  CONCEPTS.md  DECISIONS.md  DESIGN.md  GETTING_STARTED.md  GHES_SETUP.md  SUMMARY.md  config.example.toml  demo-script.sh  demo.tape  introduction.md
plans/: BOOTSTRAP.md  CQIP_2026-03-17.md  CUSTOM_PROMPTS_PRD.md  GHE_HOST_REVAMP.md  ISSUES.md  ISSUE_DEPENDENCIES_PRD.md  LAB_DAEMON_BUGS.md  OPEN_SOURCE_READINESS.md  OUTSTANDING_BUGS.md  OUTSTANDING_BUGS_2026-03-17.md  PLANS.md  ROADMAP.md  V0_BOOTSTRAP.md  V1_EXECUTION_PLAN.md
scripts/: install-hooks.sh  pre-commit
src/: agent.rs  agent_registry.rs  agent_runner.rs  ci.rs  claude_backend.rs  claude_runner.rs  codex_backend.rs  config.rs  dependencies.rs  display_utils.rs  file_lock.rs  git.rs  github.rs  graphql.rs  labels.rs  log_viewer.rs  logger.rs  main.rs  mcp.rs  merge_judge.rs  merge_readiness.rs  minion.rs  minion_lock.rs  minion_registry.rs  minion_resolver.rs  pr_monitor.rs  pr_state.rs  progress.rs  progress_comments.rs  prompt_loader.rs  prompt_renderer.rs  prompt_utils.rs  reserved_commands.rs  retry_queue.rs  session_claim.rs  shared_rate_limit.rs  stream.rs  text_buffer.rs  tmux.rs  url_utils.rs  (+4 more)
src/cli/: attach.rs  fix.rs  mod.rs
src/commands/: attach.rs  chat.rs  child_process.rs  clean.rs  fix.rs  init.rs  lab.rs  logs.rs  mcp.rs  mod.rs  path.rs  pm.rs  prompt.rs  prompts.rs  rebase.rs  rebase_prompt.md  resume.rs  review.rs  status.rs  stop.rs  tail.rs
(+14 files in other folders)
