[package]
name = "gru"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
env_logger = "0.11"
indicatif = "0.18"
log = "0.4"
once_cell = "1.21"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "~0.0.12"
toml = "0.8"
tokio = { version = "1.49", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.21", features = ["v4"] }
fs2 = "0.4"
tempfile = "3.26"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
